b=15388,15408 r=peterl@netscape.com Made it so that for absolutely positioned frames we pass in the containing block width/height to the HTML reflow state, rather than have it compute it. This means we get a bottom up size rather than a top down size. That fixes a problem where for containing blocks with a specified 'height' of 'auto' we weren't correctly calculating the containing block height